[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "appflowysdk"
version = "0.1.1"
description = "Type-safe Python SDK for the AppFlowy Cloud REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "AppFlowy SDK Contributors"},
]
keywords = ["appflowy", "api", "sdk", "cloud", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/Jemo69/appflowysdk"
Documentation = "https://github.com/Jemo69/appflowysdk/tree/main/docs"
Repository = "https://github.com/Jemo69/appflowysdk"
Issues = "https://github.com/Jemo69/appflowysdk/issues"

[tool.setuptools.packages.find]
where = ["src"]
